--- a/SQL Summaries/1. SQL Basics.md
+++ b/SQL Summaries/1. SQL Basics.md
@@ -7,3 +7,13 @@
 1. CREATE TABLE is a statement that creates a new table in a database.
 2. DROP TABLE is a statement that removes a table in a database.
 3. SELECT allows you to read data and display it. This is called a query.
+
+# 1. SELECT ... FROM ....
+1. SELECT indicates which column(s) name(s) you want to be given the data for.
+2. FROM specifies from which table(s) you want to select these columns.
+
+like:   `SELECT * FROM Table_Name`
+
+Note that:
+* SELECT does not create columns
+* Writing * after SELECT means selecting all the columns 
