--- a/SQL Summaries/1. SQL Basics.md
+++ b/SQL Summaries/1. SQL Basics.md
@@ -3,17 +3,44 @@
 * All the data in the same column must match in terms of data type. The entire column is considered either quantitative, discrete, or as some sort of string. This means if you have one row with a string in a particular column, the entire column might change to a text data type. This can be very bad if you want to do math with this column!
 * Consistent column types are one of the main reasons working with databases is fast, even with large databases.
 
-### Most popular SQL statements to understand:
+# SQL Formating
+1. Despite SQL queries being not case-sensitive, it is common and best practice to capitalize all SQL commands, like SELECT and FROM, and keep everything else in your query lower case.
+2. SQL queries ignore spaces, so you can add as many spaces and blank lines between code as you want, and the queries are the same.
+
+    * This query:
+
+      `SELECT account_id FROM orders`
+
+    * is equivalent to this query:
+
+      `SELECT account_id`
+
+      `FROM orders`
+
+3. Semicolons depend on your SQL environment.
+Your query may need a semicolon at the end to execute. Other environments are more flexible in terms of a semicolon at the end of the query being a "requirement". However, it is considered best practice to put a semicolon at the end of each statement, which also allows you to run multiple queries at once if your environment allows this.
+
+## Most popular SQL statements to understand:
 1. CREATE TABLE is a statement that creates a new table in a database.
 2. DROP TABLE is a statement that removes a table in a database.
 3. SELECT allows you to read data and display it. This is called a query.
 
 # 1. SELECT ... FROM ....
-1. SELECT indicates which column(s) name(s) you want to be given the data for.
+1. SELECT indicates which column(s) name(s) you want to be given the data for, separated by commas.
 2. FROM specifies from which table(s) you want to select these columns.
+3. LIMIT statement is useful when you want to see just the first few rows of a table.
+4. ORDER BY statement allows us to sort our results using the data in any column.
 
-like:   `SELECT * FROM Table_Name`
+like:   
+  `SELECT Column1_Name, Column2_Name, Column3_Name`
+
+  `FROM Table_Name`
+
+  `ORDER BY Column_Name DESC`
+
+  `LIMIT Number;`
 
 Note that:
 * SELECT does not create columns
-* Writing * after SELECT means selecting all the columns 
+* Writing * after SELECT instead of column names means selecting all the columns
+* In ORDER BY statement we can write DESC after the column we want to order the data by it, in order to to sort in descending order, as the default is to sort in ascending order.
