Update 1. SQL Basics.md

--- a/SQL Summaries/1. SQL Basics.md
+++ b/SQL Summaries/1. SQL Basics.md
@@ -28,8 +28,8 @@ Your query may need a semicolon at the end to execute. Other environments are mo
 # 1. SELECT ... FROM ....
 1. SELECT indicates which column(s) name(s) you want to be given the data for, separated by commas.
 2. FROM specifies from which table(s) you want to select these columns.
-3. LIMIT statement is useful when you want to see just the first few rows of a table.
-4. ORDER BY statement allows us to sort our results using the data in any column.
+3. ORDER BY statement allows us to sort our results using the data in any column ascendingly.
+4. LIMIT statement is useful when you want to see just the first few rows of a table.
 
 like:   
   `SELECT Column1_Name, Column2_Name, Column3_Name`
