--- a/SQL Summaries/1. SQL Basics.md
+++ b/SQL Summaries/1. SQL Basics.md
@@ -27,20 +27,24 @@ Your query may need a semicolon at the end to execute. Other environments are mo
 
 # 1. SELECT ... FROM ....
 1. SELECT indicates which column(s) name(s) you want to be given the data for, separated by commas.
-2. FROM specifies from which table(s) you want to select these columns.
-3. ORDER BY statement allows us to sort our results using the data in any column ascendingly.
-4. LIMIT statement is useful when you want to see just the first few rows of a table.
+2. SELECT DISTINCT statement is used to return only distinct (unique) column values or columns' combinations (in case there are more than one column selected).
+3. FROM specifies from which table(s) you want to select these columns.
+4. ORDER BY statement allows us to sort our results using the data in any column(s) ascendingly.
+5. LIMIT statement is useful when you want to see just the first few rows of a table.
+
+SELECT and FROM statements are both necessary for the query to be evaluated, while the rest are optional statements.
 
 like:   
-  `SELECT Column1_Name, Column2_Name, Column3_Name`
+  `SELECT DISTINCT Column1_Name, Column2_Name, Column3_Name`
 
   `FROM Table_Name`
 
-  `ORDER BY Column_Name DESC`
+  `ORDER BY Sort1_Column_Name, Sort2_Column_Name DESC`
 
   `LIMIT Number;`
 
 Note that:
-* SELECT does not create columns
-* Writing * after SELECT instead of column names means selecting all the columns
+* SELECT does not create columns.
+* Writing * after SELECT instead of column names means selecting all the columns.
 * In ORDER BY statement we can write DESC after the column we want to order the data by it, in order to to sort in descending order, as the default is to sort in ascending order.
+* When you provide a list of columns in an ORDER BY command, the sorting occurs using the leftmost column in your list first, then the next column from the left, and so on.
