Update 1. SQL Basics.md

--- a/SQL Summaries/1. SQL Basics.md
+++ b/SQL Summaries/1. SQL Basics.md
@@ -6,16 +6,12 @@
 # SQL Formating
 1. Despite SQL queries being not case-sensitive, it is common and best practice to capitalize all SQL commands, like SELECT and FROM, and keep everything else in your query lower case.
 2. SQL queries ignore spaces, so you can add as many spaces and blank lines between code as you want, and the queries are the same.
+#### This query
+      SELECT account_id FROM orders
 
-    * This query:
-
-      `SELECT account_id FROM orders`
-
-    * is equivalent to this query:
-
-      `SELECT account_id`
-
-      `FROM orders`
+#### is equivalent to this query:
+      SELECT account_id
+      FROM orders
 
 3. Semicolons depend on your SQL environment.
 Your query may need a semicolon at the end to execute. Other environments are more flexible in terms of a semicolon at the end of the query being a "requirement". However, it is considered best practice to put a semicolon at the end of each statement, which also allows you to run multiple queries at once if your environment allows this.
@@ -28,23 +24,38 @@ Your query may need a semicolon at the end to execute. Other environments are mo
 # 1. SELECT ... FROM ....
 1. SELECT indicates which column(s) name(s) you want to be given the data for, separated by commas.
 2. SELECT DISTINCT statement is used to return only distinct (unique) column values or columns' combinations (in case there are more than one column selected).
-3. FROM specifies from which table(s) you want to select these columns.
-4. ORDER BY statement allows us to sort our results using the data in any column(s) ascendingly.
-5. LIMIT statement is useful when you want to see just the first few rows of a table.
+3. Usually you want to give a name, or so called "alias", to your new column using the AS keyword.
+4. FROM specifies from which table(s) you want to select these columns.
+5. WHERE statement allows you to filter data based on a specific condition.
+6. ORDER BY statement allows us to sort our results using the data in any column(s) ascendingly.
+7. LIMIT statement is useful when you want to see just the first few rows of a table.
 
-SELECT and FROM statements are both necessary for the query to be evaluated, while the rest are optional statements.
+#### SELECT and FROM statements are both necessary for the query to be evaluated, while the rest are optional statements.
 
-like:   
-  `SELECT DISTINCT Column1_Name, Column2_Name, Column3_Name`
+### SELECT query structure with all of the past statement within:   
+     SELECT DISTINCT Column1_Name, Column2_Name, Column3_Name + Column4_Name AS Descriptive_New_Column_Name
+     FROM Table_Name
+     WHERE Condition
+     ORDER BY Sort1_Column_Name, Sort2_Column_Name DESC , Sort3_Column_Name
+     LIMIT Number;
 
-  `FROM Table_Name`
+### Example 1:   
+      SELECT *
+      FROM orders
+      WHERE account_id > 4200 AND destination = 'Cairo'
+      ORDER BY occured_at
+      LIMIT 1000;
 
-  `ORDER BY Sort1_Column_Name, Sort2_Column_Name DESC`
+### Example 2:
+      SELECT id, (standard_amt_usd/total_amt_usd)*100 AS std_percent, total_amt_usd
+      FROM orders
+      LIMIT 10;
 
-  `LIMIT Number;`
-
-Note that:
+### Note that:
 * SELECT does not create columns.
 * Writing * after SELECT instead of column names means selecting all the columns.
-* In ORDER BY statement we can write DESC after the column we want to order the data by it, in order to to sort in descending order, as the default is to sort in ascending order.
 * When you provide a list of columns in an ORDER BY command, the sorting occurs using the leftmost column in your list first, then the next column from the left, and so on.
+* In ORDER BY statement we can write DESC after the column we want to order the data by descendingly, in order to to sort in descending order, as the default is to sort in ascending order. DESC works only on the one column that comes exactly before it.
+* Common symbols used in WHERE statements include:
+  * Numeric: (> --- greater than), (< --- less than), (>= --- greater than or equal to), (<= --- less than or equal to), (= --- equal to) and (!= --- not equal to)
+  * Non-numeric: (LIKE), (NOT), (IN), (= --- equal to) and (!= --- not equal to)
