Update 1. SQL Basics.md

--- a/SQL Summaries/1. SQL Basics.md
+++ b/SQL Summaries/1. SQL Basics.md
@@ -24,7 +24,7 @@ Your query may need a semicolon at the end to execute. Other environments are mo
 # 1. SELECT ... FROM ....
 1. SELECT indicates which column(s) name(s) you want to be given the data for, separated by commas.
 2. SELECT DISTINCT statement is used to return only distinct (unique) column values or columns' combinations (in case there are more than one column selected).
-3. Usually you want to give a name, or so called "alias", to your new column using the AS keyword.
+3. AS is used to give a name, or so called "alias", to a new derived column or a current column that you want to display under different name in this query.
 4. FROM specifies from which table(s) you want to select these columns.
 5. WHERE statement allows you to filter data based on a specific condition.
 6. ORDER BY statement allows us to sort our results using the data in any column(s) ascendingly.
@@ -39,23 +39,34 @@ Your query may need a semicolon at the end to execute. Other environments are mo
      ORDER BY Sort1_Column_Name, Sort2_Column_Name DESC , Sort3_Column_Name
      LIMIT Number;
 
+### Note that:
+* SELECT does not create columns.
+* Writing * after SELECT instead of column names means selecting all the columns.
+* We can use all arithmetic operators ( + , - , / , * , parenthese, ... etc.) in deriving new columns.
+* When you provide a list of columns in an ORDER BY command, the sorting occurs using the leftmost column in your list first, then the next column from the left, and so on.
+* In ORDER BY statement we can write DESC after the column we want to order the data by descendingly, in order to to sort in descending order, as the default is to sort in ascending order. DESC works only on the one column that comes exactly before it.
+* Common symbols used in WHERE statements include:
+  * Numeric: (> --- greater than), (< --- less than), (>= --- greater than or equal to), (<= --- less than or equal to), (= --- equal to) and (!= --- not equal to)
+  * Non-numeric: (LIKE), (NOT), (IN), (AND), (BETWEEN), (OR), (= --- equal to) and (!= --- not equal to)
+
+### Logical Operators:
+1. LIKE This allows you to perform operations similar to using WHERE and =, but for cases when you might not know exactly what you are looking for. We use '%' where we do not know the filling. 
+2. IN This allows you to perform operations similar to using WHERE and =, but for a list of condition(s) or values.
+3. NOT This is used with IN and LIKE to select all of the rows NOT LIKE or NOT IN a certain condition.
+4. AND & BETWEEN These allow you to combine operations where all combined conditions must be true.
+5. OR This allows you to combine operations where at least one of the combined conditions must be true.
+
 ### Example 1:   
       SELECT *
       FROM orders
       WHERE account_id > 4200 AND destination = 'Cairo'
       ORDER BY occured_at
       LIMIT 1000;
-
 ### Example 2:
       SELECT id, (standard_amt_usd/total_amt_usd)*100 AS std_percent, total_amt_usd
       FROM orders
       LIMIT 10;
-
-### Note that:
-* SELECT does not create columns.
-* Writing * after SELECT instead of column names means selecting all the columns.
-* When you provide a list of columns in an ORDER BY command, the sorting occurs using the leftmost column in your list first, then the next column from the left, and so on.
-* In ORDER BY statement we can write DESC after the column we want to order the data by descendingly, in order to to sort in descending order, as the default is to sort in ascending order. DESC works only on the one column that comes exactly before it.
-* Common symbols used in WHERE statements include:
-  * Numeric: (> --- greater than), (< --- less than), (>= --- greater than or equal to), (<= --- less than or equal to), (= --- equal to) and (!= --- not equal to)
-  * Non-numeric: (LIKE), (NOT), (IN), (= --- equal to) and (!= --- not equal to)
+### Example 3:
+      SELECT *
+      FROM web_events
+      WHERE referrer_url LIKE '%google%';
