Update 1. Introduction to Git.md

--- a/Git and Github /1. Introduction to Git.md
+++ b/Git and Github /1. Introduction to Git.md
@@ -12,3 +12,9 @@ Git is a scalable open source version control system that is popular for compute
 3. Synchronizing work across different people and computers
 
 The Shell or the terminal is the program for executing commands, in addition to previewing, modifying and inspecting files and directories (folders).
+
+### Git Project
+It is classified into three parts all in a so called git repository (often refered as 'repo'):
+1. The files
+2. The directory
+3. The .git directory (which should not be edited)
