Update 1. Introduction to Git.md

--- a/Git and Github /1. Introduction to Git.md
+++ b/Git and Github /1. Introduction to Git.md
@@ -15,6 +15,9 @@ The Shell or the terminal is the program for executing commands, in addition to 
 
 ### Git Project
 It is classified into three parts all in a so called git repository (often refered as 'repo'):
-1. The files
-2. The directory
-3. The .git directory (which should not be edited)
+1. The files which store the information of the project.
+2. The directory which stores the file(s).
+3. The .git directory about the project history (which should not be edited). This directory is loacted in the main directory of the repo.
+
+#### #Saving a draft = placing in the Staging area, while saving file(s)/updating the repo = executing a commit.
+Staging area is like putting the letter in the envelope, while making a commit is to put this envelope in a mail box. In staging area we can still make changes, while by making a commit we can not change on the version committed, we need to make a new version.
