Update 1. Introduction to Git.md

--- a/Git and Github /1. Introduction to Git.md
+++ b/Git and Github /1. Introduction to Git.md
@@ -19,5 +19,6 @@ It is classified into three parts all in a so called git repository (often refer
 2. The directory which stores the file(s).
 3. The .git directory about the project history (which should not be edited). This directory is loacted in the main directory of the repo.
 
-#### #Saving a draft = placing in the Staging area, while saving file(s)/updating the repo = executing a commit.
+#### #Saving a draft = placing in the Staging area.
+#### #Saving file(s)/updating the repo = executing a commit.
 Staging area is like putting the letter in the envelope, while making a commit is to put this envelope in a mail box. In staging area we can still make changes, while by making a commit we can not change on the version committed, we need to make a new version.
