Update 2. Shell Commands.md

--- a/Git and Github /2. Shell Commands.md
+++ b/Git and Github /2. Shell Commands.md
@@ -3,20 +3,25 @@
 ### 1. Print Working directory:
     pwd
 
-### 2. Returing a list of all files and directories in the current location (working directory):
+### 2. Returing a list of the files and directories in the current location (working directory):
+#### 2.a. Showing the unhidden files and directories
     ls
+#### 2.b. Showing all the files and directories including hidden ones
+    ls -a
 
 ### 3. Change Directory:
     cd [directory_location]/[directory_name]
 
 ### 4. Editing a File:
-#### nano
+#### 4.a. nano
     nano [file_name.extension]
-This command opens a text editor on the file mentioned. It is used to delete, add or change content of a file. Then:
-* Save Changes: "Ctrl" + "O"
-* Exit the Editor: "Ctrl" + "X"
-#### echo
+This command opens a text editor on the file mentioned. It is used to delete, add or change content of a file.
+#### 4.b. echo
     echo "text content" > file_name_to_be_created.txt
     echo "text content" >> file_name_for_text_to_be_appeneded.txt
+#### Then to:
+* Save Changes: "Ctrl" + "O"
+* Exit the Editor: "Ctrl" + "X"
+
 ### 5. Checking Git Version
     git --version
