Update 1. Introduction to Git.md

--- a/Git and Github /1. Introduction to Git.md
+++ b/Git and Github /1. Introduction to Git.md
@@ -17,7 +17,7 @@ The Shell or the terminal is the program for executing commands, in addition to 
 It is classified into three parts all in a so called git repository (often refered as 'repo'):
 1. The files which store the information of the project.
 2. The directory which stores the file(s).
-3. The .git directory about the project history (which should not be edited). This directory is loacted in the main directory of the repo.
+3. The .git directory about the project history (which is a hidden directory that should not be edited). This directory is loacted in the main directory of the repo.
 
 #### #Saving a draft = placing in the Staging area.
 #### #Saving file(s)/updating the repo = executing a commit.
