Update 1. Introduction to Git.md

--- a/Git and Github /1. Introduction to Git.md
+++ b/Git and Github /1. Introduction to Git.md
@@ -22,3 +22,7 @@ It is classified into three parts all in a so called git repository (often refer
 #### #Saving a draft = placing in the Staging area.
 #### #Saving file(s)/updating the repo = executing a commit.
 Staging area is like putting the letter in the envelope, while making a commit is to put this envelope in a mail box. In staging area we can still make changes, while by making a commit we can not change on the version committed, we need to make a new version.
+
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/2bc84b16-64e1-4171-9250-ab785c727bf2)
+
+In this example we pushed 5 versions of the 'report.md' file into the staging area, but we have only committed 2 of them into the .git directory.
