--- a/Git and Github /1. Introduction to Git.md
+++ b/Git and Github /1. Introduction to Git.md
@@ -1,7 +1,7 @@
 ### Git and GitHub
 Git is a version control program, while github is a cloud-based git repository hosting platform.
 
-### Version Control
+## Version Control
 1. A version both the content of a file compined with its metadata (author, type, location and when it was last saved).
 2. Simultaneous and continuous file development
 3. Being able to see different versions, combine them or revert changes
@@ -13,7 +13,7 @@ Git is a scalable open source version control system that is popular for compute
 
 The Shell or the terminal is the program for executing commands, in addition to previewing, modifying and inspecting files and directories (folders).
 
-### Git Project
+## Git Project
 It is classified into three parts all in a so called git repository (often refered as 'repo'):
 1. The files which store the information of the project.
 2. The directory which stores the file(s).
@@ -26,3 +26,9 @@ Staging area is like putting the letter in the envelope, while making a commit i
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/2bc84b16-64e1-4171-9250-ab785c727bf2)
 
 In this example we pushed 5 versions of the 'report.md' file into the staging area, but we have only committed 2 of them into the .git directory.
+
+## Git Workflow:
+1. Modify a file
+2. Save the draft (into staging area)
+3. Commit the updated draft (into .git directory)
+4. Repeat
