Update 2. Shell Commands.md

--- a/Git and Github /2. Shell Commands.md
+++ b/Git and Github /2. Shell Commands.md
@@ -23,5 +23,18 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
 * Save Changes: "Ctrl" + "O"
 * Exit the Editor: "Ctrl" + "X"
 
-### 5. Checking Git Version
+### 5. Checking Git Version:
     git --version
+
+### 6. Saving drafts of ....... into Staging Area:
+#### 6.a. Specific File:
+    git add [file_name.extension]
+#### 6.b. All Files in the current location:
+    git add .
+
+### 7. Commit our drafts:
+    git commit -m "log message"
+-m flag allows us to include a log message about our commit, placing it in quotes. This log message is useful for reference, so it is kept short and concise.
+
+### 8. Checking the status of files (which are in Staging Area, and which have changes that are not in the Staging Area yet):
+    git status
