Update 2. Shell Commands.md

--- a/Git and Github /2. Shell Commands.md
+++ b/Git and Github /2. Shell Commands.md
@@ -38,3 +38,19 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
 
 ### 8. Checking the status of files (which are in Staging Area, and which have changes that are not in the Staging Area yet):
     git status
+
+### 9. Comparing the last committed version of a file with the ...... :
+#### 9.a. Unstaged Version of the same file:
+    git diff [file_name.extension]
+#### 9.b. Stage Version of the same file:
+    git diff -r HEAD [file_name.extension]
+-r flag to look at particular revision of the file. HEAD is a shortcut for the most recenet commit. And the 'git diff -r' will not work without 'HEAD'.
+
+#### # The output of an example on a file called report.md:
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/0f627b1e-45fe-4ce0-9f73-1caa8a1edce0)
+
+* a --> first version (committed)
+* b --> second version (unstaged)
+* -1,5 --> 1 line removed at line 5
+* +1,5 --> 1 line add at line 5
+
