Update 2. Shell Commands.md

--- a/Git and Github /2. Shell Commands.md
+++ b/Git and Github /2. Shell Commands.md
@@ -41,16 +41,19 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
 
 ### 9. Comparing the last committed version of a file with the ...... :
 #### 9.a. Unstaged Version of the same file:
-    git diff [file_name.extension]
-#### 9.b. Stage Version of the same file:
-    git diff -r HEAD [file_name.extension]
+    git diff [unstaged_file_name.extension]
+#### 9.b. Staged Version of the same file:
+    git diff -r HEAD [staged_file_name.extension]
 -r flag to look at particular revision of the file. HEAD is a shortcut for the most recenet commit. And the 'git diff -r' will not work without 'HEAD'.
+#### 9.c. Multiple Staged Versions of the same file:
+    git diff -r HEAD
 
 #### # The output of an example on a file called report.md:
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/0f627b1e-45fe-4ce0-9f73-1caa8a1edce0)
 
-* a --> first version (committed)
-* b --> second version (unstaged)
-* -1,5 --> 1 line removed at line 5
-* +1,5 --> 1 line add at line 5
+* a --> first version (committed).
+* b --> second version (unstaged).
+* -1,5 --> '-' means in version a, '1' beginning from line 1, and '5' 5 lines are extracted.
+* +1,5 --> '+' means in version a, '1' beginning from line 1, and '5' 5 lines are extracted.
+* line preceded by '-' was in version a, but not in b. And vice versa with the line preceded by '+'.
 
