Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -1,5 +1,7 @@
 # Shell Commands
 
+------------------------------------------------------------- 1. Introduction to Git ------------------------------------------------------------------------
+
 ### 1. Print Working directory:
     pwd
 
@@ -57,3 +59,7 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
 * +1,5 --> '+' means in version a, '1' beginning from line 1, and '5' 5 lines are extracted.
 * line preceded by '-' was in version a, but not in b. And vice versa with the line preceded by '+'.
 
+-------------------------------------------------------------- 2. Making Changes -------------------------------------------------------------------------
+
+### 10. Getting the Commit Structure:
+    git log
