Update 2. Making Changes.md

--- a/Git and Github /2. Making Changes.md
+++ b/Git and Github /2. Making Changes.md
@@ -5,7 +5,7 @@
 
    ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/c9f3de2c-0cad-4b8d-985a-2588cae4dc90)
 
-* The "56daf65" and other identifiers in the commit part is called "hash"
+* The "56daf65" and other identifiers in the commit part is called "hash". Hash is a 40 character string of numbers and letters, which is produced by git using a hash function (a pseudo-random number generator). Hashes enable Git to share data efficiently between repos. If two files are the same, they will have the same hashes. Therefore, Git can tell what information needs to be saved in which location by comparing hashes rather than entire files.
 * The tree represent the modified files
 * The blob connects the file in the tree with its last modification content
-#### This data can be represented using Git Log
+#### This data can be represented using Git Log.
