Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -63,3 +63,9 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
 
 ### 10. Getting the Commit Structure:
     git log
+### 11. Showing Commit in turn using 6-8 characters of the hash
+    git show hash
+#### # The output of an example on a file called mental_health_survey.csv:
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/8aa85b24-29a5-4e2d-bf94-5164d95d23fa)
+
+The error here is gender in the first column instead of the second column.
