Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -46,7 +46,7 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
     git diff [unstaged_file_name.extension]
 #### 9.b. Staged Version of the same file:
     git diff -r HEAD [staged_file_name.extension]
--r flag to look at particular revision of the file. HEAD is a shortcut for the most recenet commit. And the 'git diff -r' will not work without 'HEAD'.
+-r flag to look at particular revision of the file. HEAD is a shortcut for the most recenet commit's hash. And the 'git diff -r' will not work without 'HEAD'.
 #### 9.c. Multiple Staged Versions of the same file:
     git diff -r HEAD
 
@@ -61,11 +61,38 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
 
 -------------------------------------------------------------- 2. Making Changes -------------------------------------------------------------------------
 
-### 10. Getting the Commit Structure:
+### 10. Selecting the Version for comparison:
+#### 10.a. Last (first most recent) version:
+    git diff -r HEAD [staged_file_name.extension]
+#### 10.b. Second most recent version:
+    git diff -r HEAD~1 [staged_file_name.extension]
+#### 10.a. Third most recent version:
+    git diff -r HEAD~2 [staged_file_name.extension]
+
+### 11. Comparison of two commits:
+    git diff hash1 hash2
+##### or
+    git diff HEAD~1 HEAD~2
+
+### 12. Getting the Commit Structure:
     git log
-### 11. Showing Commit in turn using 6-8 characters of the hash
+
+### 13. Showing Commit in turn:
+#### 13.a. using 6-8 characters of the hash
     git show hash
+#### 13.b using HEAD~
+    git show HEAD~3
+This command shows the fourth most recent commit.
 #### # The output of an example on a file called mental_health_survey.csv:
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/8aa85b24-29a5-4e2d-bf94-5164d95d23fa)
 
 The error here is gender in the first column instead of the second column.
+### 14. View Changes per Document by Line:
+    git annotate [file_name.extension]
+#### # The output of an example on a file called report.md:
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/79157ef5-7252-4644-9c27-7e46d8f6e57c)
+
+
+
+
+    
