Update 2. Making Changes.md

--- a/Git and Github /2. Making Changes.md
+++ b/Git and Github /2. Making Changes.md
@@ -13,3 +13,5 @@ We run git log to view all commits and note the hashes for commits on the day in
 
 ### The HEAD Command:
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/b1f12102-cc26-4507-8a46-4768b626cef3)
+
+#### Sometimes we need to unstage file(s) to commit the rest in the staging area, then stage it/them to work on and commit seperately. This can be acheived through git reset command
