Update 2. Making Changes.md

--- a/Git and Github /2. Making Changes.md
+++ b/Git and Github /2. Making Changes.md
@@ -9,9 +9,9 @@
 * The tree represent the modified files
 * The blob connects the file in the tree with its last modification content
 #### This data can be represented using Git Log.
-We run git log to view all commits and note the hashes for commits on the day in question. We only need to note the first six-to-eight characters of the hash. We can then run git show followed by the start of the hash for each commit in turn, until we find the commit we are looking for.
+#### We run git log to view all commits and note the hashes for commits on the day in question. We only need to note the first six-to-eight characters of the hash. We can then run git show followed by the start of the hash for each commit in turn, until we find the commit we are looking for.
 
 ### The HEAD Command:
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/b1f12102-cc26-4507-8a46-4768b626cef3)
 
-#### Sometimes we need to unstage file(s) to commit the rest in the staging area, then stage it/them to work on and commit seperately. This can be acheived through git reset command
+### Sometimes we need to unstage file(s) to commit the rest in the staging area, then stage it/them to work on and commit seperately. This can be acheived through git reset command
