Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -92,7 +92,19 @@ The error here is gender in the first column instead of the second column.
 #### # The output of an example on a file called report.md:
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/79157ef5-7252-4644-9c27-7e46d8f6e57c)
 
+### 15. Unstaging Files:
+#### 15.a. Single File:
+    git reset HEAD [file_name.extension]
+#### 15.b. All Files:
+    git reset HEAD
 
+### 16. Undo changes to ....... :
+#### 16.a. One unstaged file:
+    git checkout -- [file_name.extension]
+#### 16.b. All unstaged files in the current directory and subdirectories:
+    git checkout .
+* checkout: switching to a different version (default: last version).
+* The changes are lost forever for them being never committed (saved).
 
 
     
