Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -16,11 +16,11 @@
 
 ### 4. Editing a File:
 #### 4.a. nano
-    nano [file_name.extension]
+    nano [filename]
 This command opens a text editor on the file mentioned. It is used to delete, add or change content of a file.
 #### 4.b. echo
-    echo "text content" > file_name_to_be_created.txt
-    echo "text content" >> file_name_for_text_to_be_appeneded.txt
+    echo "text content" > filename_to_be_created.txt
+    echo "text content" >> filename_for_text_to_be_appeneded.txt
 #### Then to:
 * Save Changes: "Ctrl" + "O"
 * Exit the Editor: "Ctrl" + "X"
@@ -30,7 +30,7 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
 
 ### 6. Saving drafts of ....... into Staging Area:
 #### 6.a. Specific File:
-    git add [file_name.extension]
+    git add [filename]
 #### 6.b. All Files in the current location:
     git add .
 
@@ -43,9 +43,9 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
 
 ### 9. Comparing the last committed version of a file with the ...... :
 #### 9.a. Unstaged Version of the same file:
-    git diff [unstaged_file_name.extension]
+    git diff [unstaged_filename]
 #### 9.b. Staged Version of the same file:
-    git diff -r HEAD [staged_file_name.extension]
+    git diff -r HEAD [staged_filename]
 -r flag to look at particular revision of the file. HEAD is a shortcut for the most recenet commit's hash. And the 'git diff -r' will not work without 'HEAD'.
 #### 9.c. Multiple Staged Versions of the same file:
     git diff -r HEAD
@@ -63,11 +63,11 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
 
 ### 10. Selecting the Version for comparison:
 #### 10.a. Last (first most recent) version:
-    git diff -r HEAD [staged_file_name.extension]
+    git diff -r HEAD [staged_filename]
 #### 10.b. Second most recent version:
-    git diff -r HEAD~1 [staged_file_name.extension]
+    git diff -r HEAD~1 [staged_filename]
 #### 10.a. Third most recent version:
-    git diff -r HEAD~2 [staged_file_name.extension]
+    git diff -r HEAD~2 [staged_filename]
 
 ### 11. Comparison of two commits:
     git diff hash1 hash2
@@ -75,7 +75,19 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
     git diff HEAD~1 HEAD~2
 
 ### 12. Getting the Commit Structure:
+#### 12.a. All commits:
     git log
+#### 12.b. Last N commits:
+    git log -[N]
+#### 12.c. For Specific File:
+    git log [filename]
+#### 12.d. Restricted to a date:
+    git log --since='Month Day Year' --until="Month Day Year"
+* Month ---> Three letter abbreviation
+* Day ---> one or two digits
+* Year ---> four digits
+* They can be replaced between single or double quotations.
+* --until ---> is optional
 
 ### 13. Showing Commit in turn:
 #### 13.a. using 6-8 characters of the hash
@@ -88,19 +100,19 @@ This command shows the fourth most recent commit.
 
 The error here is gender in the first column instead of the second column.
 ### 14. View Changes per Document by Line:
-    git annotate [file_name.extension]
+    git annotate [filename.extension]
 #### # The output of an example on a file called report.md:
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/79157ef5-7252-4644-9c27-7e46d8f6e57c)
 
 ### 15. Unstaging Files:
 #### 15.a. Single File:
-    git reset HEAD [file_name.extension]
+    git reset HEAD [filename]
 #### 15.b. All Files:
     git reset HEAD
 
 ### 16. Undo changes to ....... :
 #### 16.a. One unstaged file:
-    git checkout -- [file_name.extension]
+    git checkout -- [filename]
 #### 16.b. All unstaged files in the current directory and subdirectories:
     git checkout .
 * checkout: switching to a different version (default: last version).
