Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -70,7 +70,7 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
     git diff -r HEAD~2 [staged_filename]
 
 ### 11. Comparison of two commits:
-    git diff hash1 hash2
+    git diff [hash1] [hash2]
 ##### or
     git diff HEAD~1 HEAD~2
 
@@ -91,7 +91,7 @@ This command opens a text editor on the file mentioned. It is used to delete, ad
 
 ### 13. Showing Commit in turn:
 #### 13.a. using 6-8 characters of the hash
-    git show hash
+    git show [hash]
 #### 13.b using HEAD~
     git show HEAD~3
 This command shows the fourth most recent commit.
@@ -113,7 +113,9 @@ The error here is gender in the first column instead of the second column.
 ### 16. Undo changes to ....... :
 #### 16.a. One unstaged file:
     git checkout -- [filename]
-#### 16.b. All unstaged files in the current directory and subdirectories:
+#### 16.b. undo changes to a specific commit of an old version:
+    git chechout [hash] [filename]
+#### 16.c. All unstaged files in the current directory and subdirectories:
     git checkout .
 * checkout: switching to a different version (default: last version).
 * The changes are lost forever for them being never committed (saved).
