Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -111,14 +111,28 @@ The error here is gender in the first column instead of the second column.
     git reset HEAD
 
 ### 16. Undo changes to ....... :
-#### 16.a. One unstaged file:
+#### 16.a. One unstaged file to the last commit:
     git checkout -- [filename]
-#### 16.b. undo changes to a specific commit of an old version:
+#### 16.b. One unstaged at specific commit:
     git chechout [hash] [filename]
-#### 16.c. All unstaged files in the current directory and subdirectories:
+##### or
+    git checkout HEAD~[N] [filename]
+#### 16.c. All unstaged files in the current directory and subdirectories to the last commit:
     git checkout .
+#### 16.d. All unstaged files in the current directory and subdirectories at specific commit:
+    git chechout [hash]
+##### or
+    git checkout HEAD~[N]
+
 * checkout: switching to a different version (default: last version).
 * The changes are lost forever for them being never committed (saved).
+
+### 17. Cleaning Repositories:
+#### 17.a. See untracked files (never committed, which is very recently created or copied from another project):
+    git clean -n
+#### 17.b. Delete those files:
+    git clean -f
+##### # git clean -f cannot be undone.
 
 
     
