Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -134,5 +134,16 @@ The error here is gender in the first column instead of the second column.
     git clean -f
 ##### # git clean -f cannot be undone.
 
+### 18. Git Settings Configuration:
+#### 18.a. list configuration commands
+    git config --list
+#### 18.b. Setting email address
+    git config --global user.email example@company.com
+#### 18.c. Setting user name
+    git config --global user.name "First_Name Last_Name"
+#### 18.d. Aliasing to shorten reset HEAD command to unstage(can be applied to any other)
+    git config --global alias.unstage 'reset HEAD'
+#### 18.e. Listing system commands
+    git config --system --list
 
     
