Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -134,6 +134,8 @@ The error here is gender in the first column instead of the second column.
     git clean -f
 ##### # git clean -f cannot be undone.
 
+----------------------------------------------------------------- 3. Git Workflows -------------------------------------------------------------------------
+
 ### 18. Git Settings Configuration:
 #### 18.a. list configuration commands
     git config --list
