Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -148,4 +148,8 @@ The error here is gender in the first column instead of the second column.
 #### 18.e. Listing system commands
     git config --system --list
 
-    
+### 19. Ignoring Specific Files:
+#### 19.1. Create a file called ".gitignore"
+    nano .gitignore
+#### 19.2. Within this file write the regex of the file type to be ignored (example: each file ends with .log)
+    *.log
