Update 3. Git Workflows.md

--- a/Git and Github /3. Git Workflows.md
+++ b/Git and Github /3. Git Workflows.md
@@ -1,6 +1,13 @@
 ## Git Workflow
 we can configure the git settings to satisfy user's needs.
+
 ### Git has three levels of settings:
 1. system: settings for every user using this computer
 2. gloal: settings of all of my projects
 3. local: settings for a specific project
+
+### Files usually get ignored:
+1. APIs
+2. Credentials
+3. System files
+4. Software Dependencies
