Update 3. Git Workflows.md

--- a/Git and Github /3. Git Workflows.md
+++ b/Git and Github /3. Git Workflows.md
@@ -11,3 +11,6 @@ we can configure the git settings to satisfy user's needs.
 2. Credentials
 3. System files
 4. Software Dependencies
+
+### Branches:
+Git uses branches to control versions of files and subdirectories from different users. Sometimes we need a copy of the project to edit and try some services without risking the main project to get corrupted. So, we take a branch or a copy of the project to work on and push it, if it it works properly.
