--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -153,3 +153,14 @@ The error here is gender in the first column instead of the second column.
     nano .gitignore
 #### 19.2. Within this file write the regex of the file type to be ignored (example: each file ends with .log)
     *.log
+
+### 20. Identifying Exisiting Branches:
+    git branch
+we get a list of branches. In which, we have a branch name perceeded by '*' which is the existing branch.
+
+### 21. Creating a Branch
+    git checkout -b branch_name
+
+### 22. The difference between Branches
+    git diff branch1_name branch2_name
+This produces a standard "git diff" output.
