--- a/Git and Github /3. Git Workflows.md
+++ b/Git and Github /3. Git Workflows.md
@@ -13,11 +13,17 @@ we can configure the git settings to satisfy user's needs.
 4. Software Dependencies
 
 ### Branches:
-Git uses branches to control versions of files and subdirectories from different users. Sometimes we need a copy of the project to edit and try some services without risking the main project to get corrupted. So, we take a branch or a copy of the project to work on and push it, if it it works properly (minimizing the risk of conflicting versions).
+Git uses branches to control versions of files and subdirectories from different users. Sometimes we need a copy of the project to edit and try some services without risking the main project to get corrupted. So, we take a branch or a copy of the project to work on and push it, if it it works properly (minimizing the risk of conflicting versions). Moreover, branches allow us to keep making progress concurrently by testing the code and debugging copies or branches of the code.
+
+### Example 1:
+
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/0c33ded1-78a6-4a9c-908a-8cb284fd05bf)
+
+
+#### Example 2:
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/d87086c4-6bfb-4a1e-85c2-080edc6fe725)
 
-#### In this example:
 1. Main is the default name Git provides to project creation branch.
 2. Took branch from the main called analysis to analyze the data.
 3. After two commits in analysis branch, the report branch got initialized which looks identical to the second commit in analysis branch.
