Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -161,6 +161,9 @@ we get a list of branches. In which, we have a branch name perceeded by '*' whic
 ### 21. Creating a Branch
     git checkout -b branch_name
 
-### 22. The difference between Branches
+### 22. Switching Branch
+    git checkout branch_name
+
+### 23. The difference between Branches
     git diff branch1_name branch2_name
 This produces a standard "git diff" output.
