Update 3. Git Workflows.md

--- a/Git and Github /3. Git Workflows.md
+++ b/Git and Github /3. Git Workflows.md
@@ -15,6 +15,8 @@ we can configure the git settings to satisfy user's needs.
 ### Branches:
 Git uses branches to control versions of files and subdirectories from different users. Sometimes we need a copy of the project to edit and try some services without risking the main project to get corrupted. So, we take a branch or a copy of the project to work on and push it, if it it works properly (minimizing the risk of conflicting versions). Moreover, branches allow us to keep making progress concurrently by testing the code and debugging copies or branches of the code.
 
+Each branch should be used for a specific task by a specific person.
+
 ### Example 1:
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/0c33ded1-78a6-4a9c-908a-8cb284fd05bf)
