Update 0. Shell Commands.md

--- a/Git and Github /0. Shell Commands.md
+++ b/Git and Github /0. Shell Commands.md
@@ -158,12 +158,15 @@ The error here is gender in the first column instead of the second column.
     git branch
 we get a list of branches. In which, we have a branch name perceeded by '*' which is the existing branch.
 
-### 21. Creating a Branch
+### 21. Creating a Branch:
     git checkout -b branch_name
 
-### 22. Switching Branch
+### 22. Switching Branch:
     git checkout branch_name
 
-### 23. The difference between Branches
+### 23. The difference between Branches:
     git diff branch1_name branch2_name
 This produces a standard "git diff" output.
+
+### 24. Merging Branches:
+    git merge source_branch_name destination_branch_name
