Update 3. Git Workflows.md

--- a/Git and Github /3. Git Workflows.md
+++ b/Git and Github /3. Git Workflows.md
@@ -17,7 +17,7 @@ Git uses branches to control versions of files and subdirectories from different
 
 Each branch should be used for a specific task by a specific person.
 
-### Example 1:
+#### Example 1:
 
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/0c33ded1-78a6-4a9c-908a-8cb284fd05bf)
 
@@ -31,3 +31,6 @@ Each branch should be used for a specific task by a specific person.
 3. After two commits in analysis branch, the report branch got initialized which looks identical to the second commit in analysis branch.
 4. Analysis branch got merged into the main branch (Analysis is the source and Main is the destination).
 5. After two more commits in report branch, we merge it as well into the main branch.
+
+### Handling Conflicts:
+Conflicts happen when we try to merge same files from different branches, but the versions in each branch is different. Sometimes, git automatic fixing, which is not always good enough. Then, we need to open the conflicting file to resolve the conflict. This process is okay for simple fixes and differences, but for large conflicts the process gets very intimedating.
